# qcircuit-generation

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
conf/: config.yaml
docs/: circuit_optimizer_rules.md  curriculum_learning.md  dataset_generation.md  evaluation_pipeline.md  experiment_tracking.md  training_pipeline.md
experiments/: AGENTS.md  README.md  registry.yaml
model_configs/: config.yaml  training_config.yaml
notebooks/: 01_dataset_generation.ipynb  AGENTS.md  README.md  __init__.py  bucket_batch_debug.ipynb  bucket_deep_dive.ipynb  bucket_deep_dive_helper.py  bucket_training_alignment_check.ipynb  bucket_training_alignment_helper.py  clip_tests.ipynb  cloob_model_assessment.ipynb  cloob_model_evaluation_results.ipynb  cloob_tests.ipynb  dataset_exploration.ipynb  dataset_generation_parameter_comparison.ipynb  dataset_generation_quditkit_vs_qiskit.ipynb  decode_failure_analysis.ipynb  model_evaluation.ipynb  model_evaluation_with_repairs.ipynb  old_dataset_generation.ipynb  overfit_training_comparison.ipynb  remote_model_alt_evaluation.ipynb  remote_model_evaluation_results.ipynb  stabilizer_training_compilation.ipynb  stabilizer_training_srv.ipynb  (+5 more)
src/: AGENTS.md
src/quditkit-main_schmidt/: pyproject.toml  requirements.txt
src/quditkit-main_schmidt/examples/: ._schmidt_rank.ipynb  example.ipynb  mmt_outcomes.ipynb  noise_example.ipynb  schmidt_rank.ipynb
src/quditkit-main_schmidt/src/qudit_sim/: circuit.py  predefined_gates.py  tab_io.py  tableau.py  tableau_numba_fast.py  utils.py
(+325 files in other folders)
