[project]
name = "qcircuit-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "genqc",
    "huggingface-hub",
    "hydra-core>=1.3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "omegaconf>=2.2.0",
    "pandas>=1.3.0",
    "pathlib2>=2.3.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0",
    "qiskit>=0.39.0",
    "qiskit-aer>=0.11.0",
    "ruamel-yaml",
    "safetensors",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "tensordict",
    "torch>=1.12.0",
    "tqdm>=4.64.0",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
