[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qudit_sim"
version = "0.1.0"
authors = [
  { name="Mykyta Cherniak", email="cherniakmkt@gmail.com" },
]
description = "A stabilizer tableau simulator for qudit Clifford circuits."
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]